2004-09-26  Zoltan Varga  <vargaz@freemail.hu>

	* UnmanagedMarshal.cs: Add ToMarshalAsAttribute method.

2004-09-25  Zoltan Varga  <vargaz@freemail.hu>

	* TypeBuilder.cs: Add IsCreated method.

2004-09-24  Zoltan Varga  <vargaz@freemail.hu>

	* FieldBuilder.cs: Add dummy GetFieldOffset method.

2004-09-24  Martin Baulig  <martin@ximian.com>

	* GenericTypeParameterBuilder.cs
	(GenericTypeParameterBuilder.GetGenericParameterConstraints): Override.

2004-09-23  Zoltan Varga  <vargaz@freemail.hu>

	* DynamicMethod.cs: Add MetadataToken property and tweak Module property.

2004-09-23  Martin Baulig  <martin@ximian.com>

	* GenericTypeParameterBuilder.cs
	(GenericTypeParameterBuilder.SetGenericParameterAttributes): New
	public method, replaces the old Mono_* hacks.

2004-09-20  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyBuilder.cs: Fixed assembly-level permissions. I don't know 
	why I splitted them all into individual entries when only a single set
	is accepted for each security action :(.

2004-09-17  Zoltan Varga  <vargaz@freemail.hu>

	* CustomAttributeBuilder.cs: Applied patch from Marcus Urban
	(mathpup@mylinuxisp.com). Add support for defining custom
	marshallers by calling SetCustomAttribute.	

2004-09-16  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyBuilder.cs: Keep a copy of the 3 permission set as an array
	of RefEmitPermissionSet. This will allow to reuse existing 
	functionalities already present in the runtime.

2004-09-12  Marek Safar  <marek.safar@seznam.cz>

	* TypeBuilder.cs: Do not create default constructor for
	static classes.

2004-09-09  Zoltan Varga  <vargaz@freemail.hu>

	* TypeBuilder.cs: Set the table_idx of the global type to 1.

	* ModuleBuilder.cs: Save the main module of the assembly even if it is 
	transient.

2004-09-02 Ben Maurer  <bmaurer@users.sourceforge.net>

	* LocalBuilder.cs: another s.ioe

2004-09-02 Ben Maurer  <bmaurer@users.sourceforge.net>

	* ModuleBuilder.cs: dont throw an S.IOE for debugging stuff.